<resources>
    <string name="app_name">TR</string>
    <string name="unit_number">Unit Number</string>
    <string name="postal_code">Postal Code</string>
    <string name="genreport_title">GENERATE INSPECTION REPORT:</string>
    <string name="wall_auto">Wall Auto</string>
    <string name="wall_column">Wall Column</string>
    <string name="single">Single</string>
    <string name="floor">Floor</string>
    <string name="start">START</string>
    <string name="connect">Connect</string>
    <string name="password">Password</string>
    <string name="robot_id">Robot ID</string>
    <string name="quicabot_b20">QuicaBot B20</string>
    <string name="image_of_crack">Image of Crack:</string>
    <string name="about_string">
        Transforma Robotics is a spin-off company from Nanyang Technological University (NTU) Singapore.
        We offer robots and robotic services to the construction industry,
        specifically in indoor wall painting (PictoBot) and construction quality assessment (Quicabot). </string>
    <string name="contact_string">2 CleanTech Loop, #03–15,  JTC Launchpad @ Jurong Innovation District,  Singapore 637144</string>
    <string name="phone_number"><u>+65-65702669</u></string>
    <string name="company_email"><u>contact@transformarobotics.com</u></string>
    <string name="copyright">Copyright © 2019 Transforma Robotics Pte Ltd \n  All Rights Reserved</string>
    <string name="version">App Version V%1$s</string>


    <string-array name="working_modes">
        <item>Wall Auto</item>
        <item>Wall Col</item>
        <item>Single</item>
        <item>Floor</item>
    </string-array>
</resources>
