<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:keepScreenOn="true">

    <ImageView
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:src="@drawable/logo"
        android:cropToPadding="true"
        android:layout_width="0dp"
        android:layout_height="130dp"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"

        android:elevation="4dp"
        android:contentDescription="Logo" />

    <com.google.android.material.textfield.TextInputLayout
        app:layout_constraintBottom_toTopOf="@id/PasswordLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signInBtn"
        android:id="@+id/RobotIdLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="20dp"
        android:textColorHint="@color/colorSecondary">

        <com.google.android.material.textfield.TextInputEditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/RobotId"
            android:inputType="text"
            android:textSize="15sp"
            android:hint="@string/robot_id"
            android:textColor="@color/colorSecondaryDark"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signInBtn"
        app:layout_constraintBottom_toBottomOf="parent"


        android:id="@+id/PasswordLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:textColorHint="@color/colorSecondary"
        app:passwordToggleEnabled="true"
        app:passwordToggleTint="@color/colorSecondary">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Password"
            android:inputType="textPassword"
            android:textSize="15sp"
            android:hint="@string/password"
            android:textColor="@color/colorSecondaryDark"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="@id/RobotIdLayout"
        android:layout_marginEnd="130dp"
        android:layout_marginBottom="20dp"

        android:id="@+id/signInBtn"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:elevation="4dp"
        android:onClick="Connect"
        android:text="@string/connect"
        android:textColor="@color/colorPrimary"
        android:textAlignment="center"
        app:backgroundTint = "@color/colorSecondary"
        />


</androidx.constraintlayout.widget.ConstraintLayout>
