<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".QuicabotGenerateReportSetting"
    android:keepScreenOn="true">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        app:cardCornerRadius="4dp"
        app:cardElevation="3dp"
        android:layout_column="0"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <FrameLayout
                android:id="@+id/powerColor"
                android:layout_width="20dp"
                android:layout_height="match_parent"
                android:background="@color/colorSecondary"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="15dp">
                <TextView
                    android:id="@+id/genReportSettingTitle"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_width="match_parent"
                    android:text="@string/genreport_title"
                    android:layout_marginStart="3dp"
                    android:layout_marginBottom="15dp"
                    style="@style/general_title" />
                <com.google.android.material.textfield.TextInputLayout
                    app:layout_constraintTop_toBottomOf="@id/genReportSettingTitle"
                    android:id="@+id/postalCodeLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorSecondary"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/postalCode"
                        android:textSize="17sp"
                        android:hint="@string/postal_code"
                        android:textColor="@color/colorSecondaryDark"/>
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    app:layout_constraintTop_toBottomOf="@id/postalCodeLayout"
                    android:id="@+id/passwordLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorSecondary"
                    app:passwordToggleEnabled="true"
                    android:layout_marginBottom="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/unitNumber"
                        android:textSize="17sp"
                        android:hint="@string/unit_number"

                        android:textColor="@color/colorSecondaryDark"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    app:layout_constraintTop_toBottomOf="@id/passwordLayout"
                    android:id="@+id/emaillayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/colorSecondary"
                    app:passwordToggleEnabled="true"
                    android:layout_marginBottom="10dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/email"
                        android:inputType="textEmailAddress"
                        android:textSize="17sp"
                        android:hint="Send To Email"
                        android:textColor="@color/colorSecondaryDark"/>

                </com.google.android.material.textfield.TextInputLayout>

                <!--<RadioGroup-->
                    <!--app:layout_constraintTop_toBottomOf="@id/emaillayout"-->
                    <!--android:id="@+id/workingMode"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:orientation="horizontal"-->
                    <!--android:layout_marginTop="10dp">-->

                    <!--<RadioButton-->
                        <!--android:id="@+id/modeAuto"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_weight="1"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:text="@string/wall_auto"-->
                        <!--android:textColor="@color/colorSecondary"-->
                        <!--android:textSize="17sp"-->
                        <!--/>-->
                    <!--<RadioButton-->
                        <!--android:id="@+id/modeColumn"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_weight="1"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:text="@string/wall_column"-->
                        <!--android:textColor="@color/colorSecondary"-->
                        <!--android:textSize="17sp"-->
                        <!--android:checked="true"/>-->
                    <!--<RadioButton-->
                        <!--android:id="@+id/modeSingle"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_weight="1"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:text="@string/single"-->
                        <!--android:textColor="@color/colorSecondary"-->
                        <!--android:textSize="17sp"/>-->
                    <!--<RadioButton-->
                        <!--android:id="@+id/modeFloor"-->
                        <!--android:layout_width="wrap_content"-->
                        <!--android:layout_weight="1"-->
                        <!--android:layout_height="match_parent"-->
                        <!--android:text="@string/floor"-->
                        <!--android:textColor="@color/colorSecondary"-->
                        <!--android:textSize="17sp"/>-->

                <!--</RadioGroup>-->

                <Button
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:textSize="18sp"
                    android:text="@string/start"

                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:backgroundTint = "@color/colorSecondary"
                    android:onClick="genReport"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>